--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@mui/styled-engine-sc": "^7.0.2",
     "@prisma/client": "^6.5.0",
     "@radix-ui/themes": "^3.2.1",
     "auth": "^1.2.3",
@@ -23,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "styled-components": "^6.1.17",
     "zod": "^3.24.2"
   },
   "devDependencies": {
