--- a/package.json
+++ b/package.json
@@ -23,19 +23,24 @@
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
+    "negotiator": "^1.0.0",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.17",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/negotiator": "^0.6.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
