--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/styled-engine-sc": "^7.0.2",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.9.0",
     "@radix-ui/themes": "^3.2.1",
     "auth": "^1.2.3",
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
+    "i18next": "^25.2.1",
     "negotiator": "^1.0.0",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
@@ -31,6 +32,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.6.2",
