--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "delay": "^6.0.0",
     "i18next": "^25.2.1",
     "negotiator": "^1.0.0",
-    "next": "15.2.4",
+    "next": "15.3.3",
     "next-auth": "^5.0.0-beta.25",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.56.1",
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
@@ -44,13 +44,17 @@
     "@tailwindcss/postcss": "^4",
     "@types/negotiator": "^0.6.4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.7",
+    "@types/react-dom": "19.1.6",
     "daisyui": "^5.0.27",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "15.3.3",
     "prisma": "^6.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.7",
+    "@types/react-dom": "19.1.6"
   }
 }
