--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "negotiator": "^1.0.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.25",
+    "next-client-cookies": "^2.1.0",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.1.0",
     "react": "19.1.0",
@@ -49,7 +50,7 @@
     "daisyui": "^5.0.27",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "prisma": "^6.5.0",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
