--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@radix-ui/themes": "^3.2.1",
     "auth": "^1.2.3",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
     "i18next": "^25.2.1",
+    "jsonwebtoken": "^9.0.2",
     "negotiator": "^1.0.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.25",
@@ -43,6 +45,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/negotiator": "^0.6.4",
     "@types/node": "^20",
     "@types/react": "19.1.7",
