--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "delay": "^6.0.0",
     "i18next": "^25.2.1",
     "immer": "^10.1.1",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "negotiator": "^1.0.0",
