--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.17",
+    "three": "^0.178.0",
     "zod": "^3.24.3",
     "zustand": "^5.0.6"
   },
@@ -54,8 +55,9 @@
     "@types/node": "^20",
     "@types/react": "19.1.7",
     "@types/react-dom": "19.1.6",
+    "@types/three": "^0.178.1",
     "daisyui": "^5.0.27",
-    "prisma": "^6.9.0",
+    "prisma": "^6.12.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
