--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/react-dom": "19.1.6",
     "@types/three": "^0.178.1",
     "daisyui": "^5.0.27",
+    "eslint": "^9.32.0",
     "prisma": "^6.12.0",
     "tailwindcss": "^4",
     "typescript": "^5"
